[metadata]
name = pyfxr
version = 0.2.0
description = SFXR clone using Pygame and Cython
author = Daniel Pope
author_email = mauve@mauveweb.co.uk
url = https://github.com/lordmauve/pyfxr
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3


[options]
zip_safe = False
